// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match the snapshot 1`] = `
<styled.label>
  <styled.input
    type="checkbox"
  />
  <styled.span />
</styled.label>
`;

exports[`Checkbox should match the snapshot when checked 1`] = `
<styled.label>
  <styled.input
    checked={true}
    type="checkbox"
  />
  <styled.span />
</styled.label>
`;

exports[`Checkbox should match the snapshot with label 1`] = `
<styled.label>
  Mock
  <styled.input
    type="checkbox"
  />
  <styled.span />
</styled.label>
`;
